--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>Nodecopter</title>
-		<link rel="stylesheet" href="style.css" />	
+		<link rel="stylesheet" href="style.css" />
+        <script type="text/javascript" src="jquery-1.8.3.min.js"></script>
 	</head>
 	<body>
 		<ul class="buttons">
@@ -12,7 +13,7 @@
 			<li>Back</li>
 			<li>Left</li>
 			<li>Right</li>
-			<li id="up">Up</li>
+			<li><a href="#" id="up">Up</li>
 			<li>Down</li>
 		</ul>
 
@@ -33,7 +34,7 @@
 		  	}
 		  });
 
-            document.getElementById('up').bind('click', function() {
+            $('#up').bind('click', function() {
                 socket.emit('droneCommand', {functionName: "up"})
             })
 		</script>
