--- a/index.html
+++ b/index.html
@@ -34,29 +34,29 @@
 		  	}
 		  });
 
-      document.getElementById('takeoff').bind('click', function() {
+      $('takeoff').bind('click', function() {
       	console.log('test');
           socket.emit('droneCommand', {functionName: "takeoff"})
       })
-      document.getElementById('land').bind('click', function() {
+      $('land').bind('click', function() {
           socket.emit('droneCommand', {functionName: "land"})
       })
-      document.getElementById('forward').bind('click', function() {
+      $('forward').bind('click', function() {
           socket.emit('droneCommand', {functionName: "forward"})
       })
-      document.getElementById('back').bind('click', function() {
+      $('back').bind('click', function() {
           socket.emit('droneCommand', {functionName: "back"})
       })
-      document.getElementById('left').bind('click', function() {
+      $('left').bind('click', function() {
           socket.emit('droneCommand', {functionName: "left"})
       })
-      document.getElementById('right').bind('click', function() {
+      $('right').bind('click', function() {
           socket.emit('droneCommand', {functionName: "right"})
       })
-      document.getElementById('up').bind('click', function() {
+      $('up').bind('click', function() {
           socket.emit('droneCommand', {functionName: "up"})
       })
-      document.getElementById('down').bind('click', function() {
+      $('down').bind('click', function() {
           socket.emit('droneCommand', {functionName: "down"})
       })
 		</script>
