--- a/index.html
+++ b/index.html
@@ -34,29 +34,29 @@
 		  	}
 		  });
 
-      $('takeoff').bind('click', function() {
+      $('#takeoff').bind('click', function() {
       	console.log('test');
           socket.emit('droneCommand', {functionName: "takeoff"})
       })
-      $('land').bind('click', function() {
+      $('#land').bind('click', function() {
           socket.emit('droneCommand', {functionName: "land"})
       })
-      $('forward').bind('click', function() {
+      $('#forward').bind('click', function() {
           socket.emit('droneCommand', {functionName: "forward"})
       })
-      $('back').bind('click', function() {
+      $('#back').bind('click', function() {
           socket.emit('droneCommand', {functionName: "back"})
       })
-      $('left').bind('click', function() {
+      $('#left').bind('click', function() {
           socket.emit('droneCommand', {functionName: "left"})
       })
-      $('right').bind('click', function() {
+      $('#right').bind('click', function() {
           socket.emit('droneCommand', {functionName: "right"})
       })
-      $('up').bind('click', function() {
+      $('#up').bind('click', function() {
           socket.emit('droneCommand', {functionName: "up"})
       })
-      $('down').bind('click', function() {
+      $('#down').bind('click', function() {
           socket.emit('droneCommand', {functionName: "down"})
       })
 		</script>
