Console.logs to all dom element listeners

--- a/index.html
+++ b/index.html
@@ -39,18 +39,23 @@
           socket.emit('droneCommand', {functionName: "takeoff"})
       })
       $('land').bind('click', function() {
+          console.log("land");
           socket.emit('droneCommand', {functionName: "land"})
       })
       $('forward').bind('click', function() {
+          console.log("fwd");
           socket.emit('droneCommand', {functionName: "forward"})
       })
       $('back').bind('click', function() {
+          console.log("back");
           socket.emit('droneCommand', {functionName: "back"})
       })
       $('left').bind('click', function() {
+          console.log("left");
           socket.emit('droneCommand', {functionName: "left"})
       })
       $('right').bind('click', function() {
+          console.log("right");
           socket.emit('droneCommand', {functionName: "right"})
       })
       $('up').bind('click', function() {
@@ -58,6 +63,7 @@
           socket.emit('droneCommand', {functionName: "up"})
       })
       $('down').bind('click', function() {
+          console.log("down");
           socket.emit('droneCommand', {functionName: "down"})
       })
 		</script>
