--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<script src="/socket.io/socket.io.js"></script>
 		<script>
 			var log;
-		  var socket = io.connect('http://localhost:8080');
+		  var socket = io.connect('http://192.168.1.4:8080');
 		  socket.on('drone_data', function (data) {
 		  	document.querySelector('#info').innerHTML = "";
 		  	log = data;
